Migrate code to Spring boot 3.2.2 with java 17